--- a/css/styles.css
+++ b/css/styles.css
@@ -502,7 +502,7 @@ margin-bottom: 5px;
 }
 
 .portfolio-card-overlay {
-    background: linear-gradient(to right, rgba(33, 150, 243, 0.9), rgba(33, 150, 243, 0.9));
+    background-color: rgba(33, 150, 243, 0.9);
     position: absolute;
     top: 0;
     left: 0;
@@ -522,4 +522,25 @@ margin-bottom: 5px;
 .portfolio-card:hover .portfolio-card-overlay {
     transform: translateY(0);
     transition: transform 250ms ease;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition-property: background; */
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-height: 400px;
+    min-width: 600px;
+    background-color: var(--brand-color-white);
 }
