--- a/css/styles.css
+++ b/css/styles.css
@@ -521,9 +521,8 @@ margin-bottom: 5px;
 
 .portfolio-card:hover .portfolio-card-overlay {
     transform: translateY(0);
-    transition: transform 250ms ease;
+    transition: transform 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    /* transition-property: background; */
 }
 
 .backdrop {
@@ -532,15 +531,24 @@ margin-bottom: 5px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .modal {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-height: 400px;
-    min-width: 600px;
+    left: 50%;    
+    transform: translate(-50%, -50%);    
+    width: 528px;
+    height: 581px;
     background-color: var(--brand-color-white);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    /* opacity: 1; */
+    transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
 }
