--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
     --brand-color-heder-line: #ECECEC;
     --brand-color-address:rgba(255, 255, 255, 0.6);
     --card-set-portfolio: 30px;
-    --animation-duration: 250ms;
+    --animation-duration: 1250ms;
     --animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 h1, h2, h3, h4, h5, h6, p, ul {
@@ -576,30 +576,35 @@ margin-bottom: 5px;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
-    transform: scale(1);
-    transition-property: opacity, transform;
+    transition-property: opacity;
     transition-duration: var(--animation-duration);
     transition-timing-function: var(--animation-timing-function);
     z-index: 999;
 }
 .backdrop.is-hidden {
-    transform: scale(0.5);
     opacity: 0;
     pointer-events: none;
 }
+
 .modal {
     padding: 8px;
     text-align: end;
     position: absolute;
     top: 50%;
     left: 50%;    
-    transform: translate(-50%, -50%);    
-    width: 528px;
-    height: 581px;
+    transform: translate(-50%, -50%) scale(1);
+    min-width: 528px;
+    min-height: 581px;
     background-color: var(--brand-color-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transition-delay: 250ms;
+
+    transition-property: transform;
+    transition-duration: var(--animation-duration);
+    transition-timing-function: var(--animation-timing-function);
+}
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.5);
 }
 /* декоративное подчеркивание */
 .site-nav-element {
